experiments/2023-05-30/verification_log/barthe/count-loops/bubblesort.log
/usr/bin/clang-10 -c -emit-llvm -D__SEAHORN__ -fdeclspec -O1 -Xclang -disable-llvm-optzns -fgnu89-inline -m64 -I/home/usea/seahorn/include -o /tmp/sea-h8kvtsqs/bubblesort.bc ./results/barthe/count-loops/bubblesort.c
./results/barthe/count-loops/bubblesort.c:9:1: warning: return type of 'main' is not 'int' [-Wmain-return-type]
void main() {
^
./results/barthe/count-loops/bubblesort.c:9:1: note: change return type to 'int'
void main() {
^~~~
int
./results/barthe/count-loops/bubblesort.c:64:19: error: use of undeclared identifier 'i'
    sassert(((a_1[i] >= a_2[_j]) && ((a_1[_j] - a_2[_j]) < epsilon)) || ((a_2[i] >= a_1[_j]) && ((a_2[_j] - a_1[_j]) < epsilon)));
                  ^
./results/barthe/count-loops/bubblesort.c:64:79: error: use of undeclared identifier 'i'
    sassert(((a_1[i] >= a_2[_j]) && ((a_1[_j] - a_2[_j]) < epsilon)) || ((a_2[i] >= a_1[_j]) && ((a_2[_j] - a_1[_j]) < epsilon)));
                                                                              ^
1 warning and 2 errors generated.

real	0m0.090s
user	0m0.055s
sys	0m0.018s
